; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/vmware/vmxnet3/extr_if_vmx.c_vmxnet3_read_cmd.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/vmware/vmxnet3/extr_if_vmx.c_vmxnet3_read_cmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vmxnet3_softc = type { i32, i32 }

@BUS_SPACE_BARRIER_READ = common dso_local global i32 0, align 4
@BUS_SPACE_BARRIER_WRITE = common dso_local global i32 0, align 4
@VMXNET3_BAR1_CMD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vmxnet3_softc*, i32)* @vmxnet3_read_cmd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vmxnet3_read_cmd(%struct.vmxnet3_softc* %0, i32 %1) #0 {
  %3 = alloca %struct.vmxnet3_softc*, align 8
  %4 = alloca i32, align 4
  store %struct.vmxnet3_softc* %0, %struct.vmxnet3_softc** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.vmxnet3_softc*, %struct.vmxnet3_softc** %3, align 8
  %6 = load i32, i32* %4, align 4
  %7 = call i32 @vmxnet3_write_cmd(%struct.vmxnet3_softc* %5, i32 %6)
  %8 = load %struct.vmxnet3_softc*, %struct.vmxnet3_softc** %3, align 8
  %9 = getelementptr inbounds %struct.vmxnet3_softc, %struct.vmxnet3_softc* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.vmxnet3_softc*, %struct.vmxnet3_softc** %3, align 8
  %12 = getelementptr inbounds %struct.vmxnet3_softc, %struct.vmxnet3_softc* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @BUS_SPACE_BARRIER_READ, align 4
  %15 = load i32, i32* @BUS_SPACE_BARRIER_WRITE, align 4
  %16 = or i32 %14, %15
  %17 = call i32 @bus_space_barrier(i32 %10, i32 %13, i32 0, i32 0, i32 %16)
  %18 = load %struct.vmxnet3_softc*, %struct.vmxnet3_softc** %3, align 8
  %19 = load i32, i32* @VMXNET3_BAR1_CMD, align 4
  %20 = call i32 @vmxnet3_read_bar1(%struct.vmxnet3_softc* %18, i32 %19)
  ret i32 %20
}

declare dso_local i32 @vmxnet3_write_cmd(%struct.vmxnet3_softc*, i32) #1

declare dso_local i32 @bus_space_barrier(i32, i32, i32, i32, i32) #1

declare dso_local i32 @vmxnet3_read_bar1(%struct.vmxnet3_softc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
